# finance-statement-analyzer

./: .gitignore  Cargo.toml  README.md  analyse.fsx  analyse.py  sample.csv
.github/workflows/: check.yml  test.yml
src/: analyze.rs  calc.rs  compare.rs  lib.rs  main.rs  merge.rs  record.rs  tree.rs  utils.rs
src/tree/: compare_tree.rs  diff_tree.rs  total_tree.rs
src/utils/: ignored_categories.rs
